lab machines in ssh config, some other small things

--- a/.ssh/config
+++ b/.ssh/config
@@ -1,7 +1,7 @@
-Host th121-3.cs.wm.edu
-  HostName th121-3.cs.wm.edu
-  User mwberthoud
+Host lab3
+    HostName th121-3.cs.wm.edu
+    User mwberthoud
 
-Host th121-22.cs.wm.edu
-  HostName th121-22.cs.wm.edu
-  User mwberthoud
+Host lab22
+    HostName th121-22.cs.wm.edu
+    User mwberthoud
