--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,8 +1,5 @@
-setw -g default-terminal "screen-256color"
-set -g status-bg "#A9A9A9"
+set-option -g default-terminal "screen-256color"
+setw -g mode-keys vi
 
-# Move between windows using Vim-style key bindings
-bind-key -n C-h select-pane -L
-bind-key -n C-j select-pane -D
-bind-key -n C-k select-pane -U
-bind-key -n C-l select-pane -R
+# reload config
+bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
