sorted out ssh stuff

--- a/.ssh/config
+++ b/.ssh/config
@@ -1,7 +1,11 @@
-Host lab3
-    HostName th121-3.cs.wm.edu
+Host lab
+    HostName th121-22.cs.wm.edu
     User mwberthoud
 
-Host lab22
-    HostName th121-22.cs.wm.edu
+Host db
+    HostName db.cs.wm.edu
+    User mwberthoud
+
+Host bg3
+    HostName bg3.cs.wm.edu
     User mwberthoud
