--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,7 @@
-set-option -g default-terminal "screen-256color"
+# set-option -g default-terminal "screen-256color"
+# set -g default-terminal "alacritty-256color"
+# set -as terminal-features ",xterm-256color:RGB"
+
 setw -g mode-keys vi
 
 # reload config
