--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,7 @@
-# set-option -g default-terminal "screen-256color"
-# set -g default-terminal "alacritty-256color"
+set -g default-terminal "tmux-256color"
+set -ag terminal-overrides ",xterm-256color:RGB"
+
+# set -g default-terminal "screen-256color"
 # set -as terminal-features ",xterm-256color:RGB"
 
 setw -g mode-keys vi
