--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,8 +1,15 @@
 set -g default-terminal "tmux-256color"
 set -ag terminal-overrides ",xterm-256color:RGB"
 
-# set -g default-terminal "screen-256color"
-# set -as terminal-features ",xterm-256color:RGB"
+# Set the control character to Ctrl+Spacebar (instead of Ctrl+B)
+set -g prefix C-space
+unbind-key C-b
+bind-key C-space send-prefix
+
+# Set new panes to open in current directory
+bind c new-window -c "#{pane_current_path}"
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
 
 setw -g mode-keys vi
 
