--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,7 +11,12 @@ bind c new-window -c "#{pane_current_path}"
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 
+# let you move around with paste mode with vim motions
 setw -g mode-keys vi
 
-# reload config
+# make sessions, windows, panes start at 1
+set -g base-index 1
+setw -g pane-base-index 1
+
+# reload config keybind
 bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
