--- a/.ssh/config
+++ b/.ssh/config
@@ -2,6 +2,10 @@ Host lab
     HostName th121-22.cs.wm.edu
     User mwberthoud
 
+Host lab18
+    HostName th121-18.cs.wm.edu
+    User mwberthoud
+
 Host db
     HostName db.cs.wm.edu
     User mwberthoud
