--- a/.ssh/config
+++ b/.ssh/config
@@ -1,3 +1,11 @@
+Host matthew-server
+    HostName 100.75.225.84
+    User matthew
+
+Host plex-server
+    HostName 100.75.225.84
+    User plex
+
 Host lab
     HostName th121-22.cs.wm.edu
     User mwberthoud
@@ -17,3 +25,12 @@ Host bg3
 Host bg13
     HostName bg13.cs.wm.edu
     User mwberthoud
+
+Host home
+    # HostName turner-berthoud-server.local
+    HostName 192.168.4.64
+    User matthew
+
+Host plex
+    HostName 192.168.4.64
+    User plex
