--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,9 +2,9 @@ set -g default-terminal "tmux-256color"
 set -ag terminal-overrides ",xterm-256color:RGB"
 
 # Set the control character to Ctrl+Spacebar (instead of Ctrl+B)
-set -g prefix C-space
-unbind-key C-b
-bind-key C-space send-prefix
+# set -g prefix C-space
+# unbind-key C-b
+# bind-key C-space send-prefix
 
 # Set new panes to open in current directory
 bind c new-window -c "#{pane_current_path}"
@@ -40,3 +40,5 @@ bind-key -T copy-mode-vi 'C-j' select-pane -D
 bind-key -T copy-mode-vi 'C-k' select-pane -U
 bind-key -T copy-mode-vi 'C-l' select-pane -R
 bind-key -T copy-mode-vi 'C-\' select-pane -l
+
+
