--- a/docker-dev/go/Dockerfile
+++ b/docker-dev/go/Dockerfile
@@ -12,6 +12,7 @@ USER mwberthoud
 WORKDIR /home/mwberthoud
 
 ENV TERM=xterm-256color
+ENV SHELL=/bin/bash
 ENV GO111MODULE=on
 ENV GOPATH=/go
 
@@ -20,5 +21,7 @@ RUN git clone https://github.com/Matthew-Berthoud/.dotfiles.git
 # Get rid of current bashrc so mine can come in with pretty colors!
 RUN mv /home/mwberthoud/.bashrc /home/mwberthoud/.default-bashrc
 RUN bash .dotfiles/scripts/install.sh
+RUN mkdir .ssh
+RUN touch .ssh/known_hosts
 
 WORKDIR /workspace
