--- a/docker-dev/python/Dockerfile
+++ b/docker-dev/python/Dockerfile
@@ -19,6 +19,8 @@ RUN git clone https://github.com/Matthew-Berthoud/.dotfiles.git
 # Get rid of current bashrc so mine can come in with pretty colors!
 RUN mv /home/mwberthoud/.bashrc /home/mwberthoud/.default-bashrc
 RUN bash .dotfiles/scripts/install.sh
+RUN mkdir .ssh
+RUN touch .ssh/known_hosts
 
 WORKDIR /workspace
 
