bunch of Brewfile additions, install changes

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -11,3 +11,12 @@ set -g prefix C-a
 unbind C-b
 bind C-a send-prefix
 
+# Vim movement for scroll/select mode
+set-window-option -g mode-keys vi
+
+# Vim motions for panes, instead of arrow keys
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
