--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -14,6 +14,11 @@ bind C-a send-prefix
 # Vim movement for scroll/select mode
 set-window-option -g mode-keys vi
 
+# Use same working directory in new panes and windows
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
+
 # Vim motions for panes, instead of arrow keys
 bind h select-pane -L
 bind j select-pane -D
