--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "nvim"]
 	path = nvim
-	url = https://github.com/Matthew-Berthoud/neovim.git
+	url = git@github.com:Matthew-Berthoud/neovim.git
