--- a/brew/Brewfile
+++ b/brew/Brewfile
@@ -3,18 +3,21 @@ brew 'curl'
 brew 'gh'
 brew 'git'
 brew 'git-lfs'
+brew 'libxml2'
 brew 'neovim'
 brew 'nvm'
 brew 'pngpaste'
 brew 'pyenv'
 brew 'ripgrep'
 brew 'tmux'
+brew 'tmuxinator'
 brew 'tree'
 brew 'unzip'
+brew 'uv'
 brew 'wget'
 cask 'font-jetbrains-mono-nerd-font'
 cask 'ghostty'
 cask 'google-chrome'
 cask 'karabiner-elements'
-cask 'unnaturalscrollwheels'
 cask 'tailscale-app'
+cask 'unnaturalscrollwheels'
