--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "nvim"]
 	path = nvim
 	url = git@github.com:Matthew-Berthoud/neovim.git
+[submodule "kmonad"]
+	path = kmonad
+	url = git@github.com:kmonad/kmonad.git
