--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,5 +1,11 @@
 # Example .tmux.conf located in /opt/homebrew/opt/tmux/share/tmux/example_tmux.conf 
 
+# allow scrolling back 100,000 lines in terminal
+set -g history-limit 100000
+
+# allow mouse click between panes
+set -g mouse on
+
 # No bells at all
 set -g bell-action none
 
