work env updates

--- a/tmuxinator/ndaa.yml
+++ b/tmuxinator/ndaa.yml
@@ -1,10 +1,11 @@
 name: ndaa
+attach: false
 root: ~/repos/odam-ndaa/
 startup_window: terminal
 pre_window:
   - source .venv/bin/activate
   - uv sync
 windows:
-- editor: nvim README.md
+- editor: nvim
 - terminal: git status && git branch
 - server: make run-ui
