notes in the foreground

--- a/tmuxinator/ngrer.yml
+++ b/tmuxinator/ngrer.yml
@@ -44,7 +44,7 @@ startup_window: terminal
 # startup_pane: 1
 
 # Controls whether the tmux session should be attached to automatically. Defaults to true.
-# attach: false
+attach: false
 
 windows:
   - editor: nvim
