--- a/tmuxinator/notes.yml
+++ b/tmuxinator/notes.yml
@@ -42,7 +42,7 @@ root: ~/Desktop/notes
 # startup_pane: 1
 
 # Controls whether the tmux session should be attached to automatically. Defaults to true.
-attach: false
+# attach: false
 
 windows:
   - editor: daily
