--- a/tmuxinator/ngrer.yml
+++ b/tmuxinator/ngrer.yml
@@ -1,7 +1,7 @@
 # /Users/matthewberthoud/.config/tmuxinator/ngrer.yml
 
 name: ngrer
-root: ~/repos/ngrer/
+root: "$WORK_REPOS/ngrer/"
 
 # Optional tmux socket
 # socket_name: foo
