--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -10,9 +10,13 @@ set -g mouse on
 set -g bell-action none
 
 # Change the prefix key to C-a
-set -g prefix C-a
 unbind C-b
-bind C-a send-prefix
+set -g prefix C-Space
+bind C-Space send-prefix
+
+# Start window and pane numbering at 1
+set-option -g base-index 1
+set-window-option -g pane-base-index 1
 
 # Vim movement for scroll/select mode
 set-window-option -g mode-keys vi
