--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,3 +1,4 @@
+# vim: set filetype=sh :
 # Example .tmux.conf located in /opt/homebrew/opt/tmux/share/tmux/example_tmux.conf 
 
 # allow scrolling back 100,000 lines in terminal
@@ -45,3 +46,12 @@ bind-key -T copy-mode-vi 'C-j' select-pane -D
 bind-key -T copy-mode-vi 'C-k' select-pane -U
 bind-key -T copy-mode-vi 'C-l' select-pane -R
 bind-key -T copy-mode-vi 'C-\' select-pane -l
+
+# Do the following to get used to using the numbers instead of previous and next
+# Unbind default session switching
+unbind (
+unbind )
+
+# Unbind default window switching
+unbind p
+unbind n
