sylvan-inspired tmux stuff

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,26 +1,30 @@
 # vim: set filetype=sh :
 # Example .tmux.conf located in /opt/homebrew/opt/tmux/share/tmux/example_tmux.conf 
 
-# allow scrolling back 100,000 lines in terminal
-set -g history-limit 100000
+set -a terminal-features "tmux-256color:RGB"
+set -g prefix C-SPACE
 
-# allow mouse click between panes
-set -g mouse on
-
-# No bells at all
-set -g bell-action none
-
-# Change the prefix key to C-a
-unbind C-b
-set -g prefix C-Space
-bind C-Space send-prefix
-
-# Start window and pane numbering at 1
-set-option -g base-index 1
+set -g base-index 1
 set-window-option -g pane-base-index 1
 
-# Vim movement for scroll/select mode
+set -g mode-keys vi
 set-window-option -g mode-keys vi
+
+set -g status-position top
+set -g status-justify absolute-centre
+set -g status-style "bg=default"
+set -g window-status-current-style "fg=black bg=white  "
+set -g status-interval 5
+set -g status-left "#S"
+set -g status-right ""
+
+bind r source-file "~/.config/tmux/tmux.conf"
+
+set -g history-limit 100000
+set -g mouse on
+set -g bell-action none
+
+bind E show-environment -g
 
 # Use same working directory in new panes and windows
 bind '"' split-window -c "#{pane_current_path}"
